# yaskkserv2

./: Cargo.toml  README.md
.github/workflows/: release.yml
etc/: yaskkserv2.conf
src/: lib.rs  skk.rs
src/skk/: candidates.rs  dictionary.rs  encoding_simple.rs  error.rs  mod.rs  test_unix.rs  yaskkserv2.rs
src/skk/encoding_simple/: decoder.rs  encoder.rs  encoding_table.rs  encoding_table_get.rs  euc.rs  mod.rs
src/skk/test_unix/: ddskk.rs  dictionary.rs  echo_server.rs  encoding.rs  jisyo.rs  miscellaneous.rs  mod.rs  setup.rs  yaskkserv.rs  yaskkserv2.rs  yaskkserv2_benchmark.rs
src/skk/yaskkserv2/: command_line.rs  config_file.rs  dictionary_reader.rs  google_cache.rs  mod.rs  request.rs  server.rs  test_unix.rs
src/skk/yaskkserv2_make_dictionary/: command_line.rs  dictionary_creator.rs  jisyo_creator.rs  jisyo_reader.rs  mod.rs
