[package]
name = "yaskkserv2"
version = "0.1.0"
authors = ["Tadashi Watanabe <wac@umiushi.org>"]
description = "Yet Another Skkserv 2"
edition = "2018"

[dependencies]
bincode = "1.1.4"
clap = "2.33.0"
daemonize = "0.4.1"
json = "0.12.0"
lazy_static = "1.4.0"
mio = "0.6.19"
regex = "1.3.1"
reqwest = "0.9.20"
rustc-hash = "1.0.1"
serde = "1.0.101"
serde_derive = "1.0.101"
sha1 = "0.6.0"
syslog = "4.0.1"
tempfile = "3.1.0"
twoway = "0.2.0"
url = "1.7.2"

# for test
rand = "*"

[features]
assert_paranoia = []
benchmark = []
print_debug_for_benchmark = []
