[package]
name = "yaskkserv2"
version = "0.1.1"
authors = ["Tadashi Watanabe <twacc2020@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Yet Another Skkserv 2"
edition = "2018"

[dependencies]
bincode = "1.1.4"
clap = "2.33.0"
json = "0.12.0"
mio = "0.6.19"
once_cell = "1.4.1"
regex = "1.3.1"
reqwest = "0.9.20"
rustc-hash = "1.0.1"
serde = "1.0.101"
serde_derive = "1.0.101"
sha1 = "0.6.0"
tempfile = "3.1.0"
thiserror = "1.0.20"
twoway = "0.2.0"
url = "1.7.2"

[dev-dependencies]
rand = "*"

[target.'cfg(unix)'.dependencies]
daemonize = "0.4.1"
syslog = "4.0.1"

[target.'cfg(not(unix))'.dependencies]
log = "0.4.11"
env_logger = "0.7.1"

[features]
assert_paranoia = []
benchmark = []
print_debug_for_benchmark = []
