[package]
name = "yaskkserv2"
version = "0.1.2"
authors = ["Tadashi Watanabe <twacc2020@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Yet Another Skkserv 2"
edition = "2021"

[dependencies]
bincode = "1.3.3"
clap = "3.2.4"
json = "0.12.4"
mio = "0.8.3"
once_cell = "1.12.0"
regex = "1.5.5"
reqwest = { version = "0.11.11", default-features = false, features = ["blocking"] }
rustc-hash = "1.1.0"
serde = "1.0.137"
serde_derive = "1.0.137"
sha1 = "0.10.1"
tempfile = "3.3.0"
thiserror = "1.0.31"
twoway = "0.2.2"
url = "2.2.2"

[dev-dependencies]
rand = "*"

[target.'cfg(unix)'.dependencies]
daemonize = "0.4.1"
syslog = "4.0.1"

[target.'cfg(not(unix))'.dependencies]
log = "0.4.11"
env_logger = "0.7.1"

[features]
assert_paranoia = []
benchmark = []
print_debug_for_benchmark = []

[profile.production]
inherits = "release"
lto = "fat"
strip = "symbols"
